problems.


-------------------------------------------------------------------------------

Thu Mar 16 23:02:49 GMT 2000
(gilbertt)

Patch from Marius Aamodt Eriksen <marius@linux.com>. Provides option to
include shaded windows in focuslist. Now all we need is an "include
iconified windows" option...


-------------------------------------------------------------------------------

Fri Mar 17 21:09:33 GMT 2000
(gilbertt)

Another patch from Marius Aamodt Eriksen <marius@linux.com>. Adds the
option to include iconified windows in the focuslist and uniconify them on
selection. Flim.

-------------------------------------------------------------------------------

Fri Mar 17 23:01:24 PST 2000
(KainX)

I found the problem in icccm.c.  For some reason, somebody thought it
would be a good idea to set minimum width/height equal to the base
width/height if no *maximum* size was specified.  I think they meant to
check for *minimum* size.  Anyway, I fixed that and added a more robust
check for that kind of thing.

-------------------------------------------------------------------------------

Sat Mar 18 18:24:29 CET 2000
(Christian)

Well, I'm committing the area wraparound stuff, since people
keep asking me for updated versons of the patch. I've moved
the config option to the areas dialog, where it fits better.
Feel free to revert if this is inappropriate.

-------------------------------------------------------------------------------

Mon Mar 20 21:58:50 GMT 2000
(gilbertt)

You can now iconify windows with skip_winlists set.


-------------------------------------------------------------------------------

Thu Mar 23 22:02:20 PST 2000
(Mandrake)

redoing libXinerama support.  If you use xinerama, try using the "xinerama"
command.  ALSO - you have to make sure you installed libXinerama.a in the
right place as well as Xinerama.h -- still lots more hacking to do (trying to
do a cleaner implementation than my last hack)