@@ -617,7 +617,7 @@ IPCStruct           IPCArray[] =
  * - Mandrake
  */
 
-void
+void 
 IPC_Xinerama(char *params, Client * c)
 {
 
@@ -643,7 +643,10 @@ IPC_Xinerama(char *params, Client * c)
 	     strcat(stufftosend, s);
 	  }
 	CommsSend(c, stufftosend);
-
+     }
+   else
+     {
+	CommsSend(c, "Xinerama is not active on your system");
      }
 #else
    CommsSend(c, "Xinerama is disabled on your system");
@@ -652,7 +655,7 @@ IPC_Xinerama(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Nop(char *params, Client * c)
 {
    CommsSend(c, "nop");
@@ -660,7 +663,7 @@ IPC_Nop(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Remember(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -727,7 +730,7 @@ IPC_Remember(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_KDE(char *params, Client * c)
 {
 
@@ -771,7 +774,7 @@ IPC_KDE(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Modules(char *params, Client * c)
 {
 
@@ -853,7 +856,7 @@ IPC_Modules(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_DockPosition(char *params, Client * c)
 {
 
@@ -977,7 +980,7 @@ IPC_DockPosition(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GeneralInfo(char *params, Client * c)
 {
 
@@ -1008,7 +1011,7 @@ IPC_GeneralInfo(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Button(char *params, Client * c)
 {
 
@@ -1076,7 +1079,7 @@ IPC_Button(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Background(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -1299,7 +1302,7 @@ IPC_Background(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Border(char *params, Client * c)
 {
 
@@ -1367,7 +1370,7 @@ IPC_Border(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Cursor(char *params, Client * c)
 {
 
@@ -1435,7 +1438,7 @@ IPC_Cursor(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_TextClass(char *params, Client * c)
 {
    char                pq;
@@ -1578,7 +1581,7 @@ IPC_TextClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ColorModifierClass(char *params, Client * c)
 {
 
@@ -1649,7 +1652,7 @@ IPC_ColorModifierClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ActionClass(char *params, Client * c)
 {
 
@@ -1718,7 +1721,7 @@ IPC_ActionClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ImageClass(char *params, Client * c)
 {
    char                pq;
@@ -1944,7 +1947,7 @@ IPC_ImageClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_SoundClass(char *params, Client * c)
 {
 
@@ -2008,7 +2011,7 @@ IPC_SoundClass(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_PlaySoundClass(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -2037,7 +2040,7 @@ IPC_PlaySoundClass(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ListClassMembers(char *params, Client * c)
 {
 
@@ -2229,7 +2232,7 @@ IPC_ListClassMembers(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_DialogOK(char *params, Client * c)
 {
 
@@ -2250,7 +2253,7 @@ IPC_DialogOK(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_SetFocus(char *params, Client * c)
 {
 
@@ -2297,7 +2300,7 @@ IPC_SetFocus(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_AdvancedFocus(char *params, Client * c)
 {
 
@@ -2659,7 +2662,7 @@ IPC_AdvancedFocus(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_InternalList(char *params, Client * c)
 {
 
@@ -2741,7 +2744,7 @@ IPC_InternalList(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Pager(char *params, Client * c)
 {
 
@@ -2973,7 +2976,7 @@ IPC_Pager(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_MoveMode(char *params, Client * c)
 {
 
@@ -3044,7 +3047,7 @@ IPC_MoveMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ResizeMode(char *params, Client * c)
 {
 
@@ -3109,7 +3112,7 @@ IPC_ResizeMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_FX(char *params, Client * c)
 {
 
@@ -3586,7 +3589,7 @@ IPC_FX(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ActiveNetwork(char *params, Client * c)
 {
    char                buf[FILEPATH_LEN_MAX];
@@ -3641,7 +3644,7 @@ IPC_ActiveNetwork(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ButtonShow(char *params, Client * c)
 {
    c = NULL;
@@ -3656,7 +3659,7 @@ IPC_ButtonShow(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_WinList(char *params, Client * c)
 {
 
@@ -3712,7 +3715,7 @@ IPC_WinList(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GotoArea(char *params, Client * c)
 {
 
@@ -3790,7 +3793,7 @@ IPC_GotoArea(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_WinOps(char *params, Client * c)
 {
 
@@ -4284,7 +4287,7 @@ IPC_WinOps(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_NumAreas(char *params, Client * c)
 {
 
@@ -4321,7 +4324,7 @@ IPC_NumAreas(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_NumDesks(char *params, Client * c)
 {
 
@@ -4352,7 +4355,7 @@ IPC_NumDesks(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_FocusMode(char *params, Client * c)
 {
 
@@ -4423,7 +4426,7 @@ IPC_FocusMode(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ShowIcons(char *params, Client * c)
 {
 
@@ -4467,7 +4470,7 @@ IPC_ShowIcons(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_GotoDesktop(char *params, Client * c)
 {
 
@@ -4504,7 +4507,7 @@ IPC_GotoDesktop(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_ListThemes(char *params, Client * c)
 {
 
@@ -4545,7 +4548,7 @@ IPC_ListThemes(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_SMFile(char *params, Client * c)
 {
 
@@ -4576,7 +4579,7 @@ IPC_SMFile(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_ForceSave(char *params, Client * c)
 {
 
@@ -4592,7 +4595,7 @@ IPC_ForceSave(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Restart(char *params, Client * c)
 {
 
@@ -4603,7 +4606,7 @@ IPC_Restart(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_RestartWM(char *params, Client * c)
 {
 
@@ -4625,7 +4628,7 @@ IPC_RestartWM(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_RestartTheme(char *params, Client * c)
 {
 
@@ -4645,7 +4648,7 @@ IPC_RestartTheme(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Exit(char *params, Client * c)
 {
 
@@ -4659,7 +4662,7 @@ IPC_Exit(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_DefaultTheme(char *params, Client * c)
 {
 
@@ -4699,7 +4702,7 @@ IPC_DefaultTheme(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_CurrentTheme(char *params, Client * c)
 {
 
@@ -4715,7 +4718,7 @@ IPC_CurrentTheme(char *params, Client * c)
    params = NULL;
 }
 
-void
+void 
 IPC_AutoSave(char *params, Client * c)
 {
 
@@ -4752,7 +4755,7 @@ IPC_AutoSave(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Help(char *params, Client * c)
 {
 
@@ -4850,7 +4853,7 @@ IPC_Help(char *params, Client * c)
    return;
 }
 
-void
+void 
 IPC_Copyright(char *params, Client * c)
 {
 
@@ -4907,7 +4910,7 @@ IPC_Copyright(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Version(char *params, Client * c)
 {
 
@@ -4936,7 +4939,7 @@ IPC_Version(char *params, Client * c)
  * - Mandrake
  */
 
-int
+int 
 HandleIPC(char *params, Client * c)
 {
 
@@ -4972,7 +4975,7 @@ HandleIPC(char *params, Client * c)
  * button was depressed
  */
 
-void
+void 
 ButtonIPC(int val, void *data)
 {
 
@@ -4987,7 +4990,7 @@ ButtonIPC(int val, void *data)
  *
  */
 
-void
+void 
 IPC_ReloadMenus(char *params, Client * c)
 {
    /*
@@ -5038,7 +5041,7 @@ IPC_ReloadMenus(char *params, Client * c)
    c = NULL;
 }
 
-void
+void 
 IPC_GroupInfo(char *params, Client * c)
 {
 
@@ -5129,7 +5132,7 @@ IPC_GroupInfo(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_GroupOps(char *params, Client * c)
 {
 
@@ -5245,7 +5248,7 @@ IPC_GroupOps(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_Group(char *params, Client * c)
 {
 
@@ -5392,7 +5395,7 @@ IPC_Group(char *params, Client * c)
 
 }
 
-void
+void 
 IPC_MemDebug(char *params, Client * c)
 {
    EDisplayMemUse();
